<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_description"
            android:icon="@drawable/ic_menu_description"
            android:title="@string/menu_description" />
        <item
            android:id="@+id/nav_details"
            android:icon="@drawable/ic_menu_details"
            android:title="@string/menu_details" />
        <item
            android:id="@+id/nav_sizes"
            android:icon="@drawable/ic_menu_sizes"
            android:title="@string/menu_sizes" />
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/ic_menu_play"
            android:title="@string/menu_play" />
    </group>
</menu>