<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="8dp"
    android:paddingVertical="16dp">

    <ImageView
        android:id="@+id/image_pokemon_sprite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_pokemon_sprite_desc"
        android:src="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_pokemon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pokemon_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_pokemon_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/text_pokemon_type"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_pokemon_basexp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_pokemon_basexp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_pokemon_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/text_pokemon_height"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_pokemon_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/text_pokemon_weight"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_pokemon_abilities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_pokemon_abilities"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
